--- a/padolabs.css
+++ b/padolabs.css
@@ -118,10 +118,117 @@ header div {
 .top h1{
     text-align: right;
 }
+.top p{
+  font-size: 18px;
+  text-align: right;
+}
 
 .body{
     padding: 4% 2%;
     display: grid;
     grid-template-columns: 30% 70%;
     gap: 2%;
+    background-color: rgba(227, 235, 255, 0.7);
+}
+.process{
+     margin: auto;
+}
+.process h2 {
+  text-align: center;
+  margin-bottom: 30px;
+  color: rgb(69, 43, 167);
+  font-weight: 600;
+  font-size: 1.3em;
+}
+
+.process-wrapper {
+  position: relative;
+  padding-left: 40px;
+  border-left: 3px solid rgb(69, 43, 167); 
+}
+
+.step {
+  position: relative;
+  margin-bottom: 40px;
+}
+
+.step-number {
+  position: absolute;
+  left: -60px;
+  top: 0;
+  width: 40px;
+  height: 40px;
+  background-color: #004b91;
+  color: white;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: bold;
+}
+
+.step-content {
+  background-color: rgb(69, 43, 167);
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 2px 8px rgba(0,0,0,0.05);
+}
+
+.step-content h3 {
+  margin-top: 0;
+  color: white;
+}
+
+.step-content p {
+  margin: 10px 0 0;
+  color: white;
+  font-size: 0.85em;
+}
+.item{
+    text-align: left;
+    margin: 1.6em 0.8em;
+    border-bottom: 1px gray solid;
+    padding-bottom: 0.6em;
+  }
+  .item h3{
+    font-size: 25px;
+    margin-bottom: 20px;
+    font-weight: 600;
+  }
+  .but-row{
+  display: flex;
+  flex-direction: row;
+  width: 80%;
+  justify-content: center;
+}
+.but-row button{
+  margin: 0.5em 1.5em ;
+  padding: 0.6em 0.8em;
+  background-color: #051930;
+  color: #f1f1f1;
+  text-transform: capitalize;
+  border-radius: 8px;
+  font-weight: 600;
+}
+
+.support{
+  display:grid;
+  grid-template-columns: 55% 45%;
+  
+}
+.others{
+  background-color:rgb(69, 43, 167) ;
+  padding: 40px;
+  color: white;
+}
+.graphics{
+  background-image: url(inages/graphics.png);
+}
+.others h2{
+  font-size: 28px;
+  margin-bottom: 15px;
+}
+.inner{
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
