--- a/padolabs.css
+++ b/padolabs.css
@@ -222,7 +222,7 @@ header div {
   color: white;
 }
 .graphics{
-  background-image: url(images/247.png);
+  background-image: url(images/graphics.png);
 }
 .others h2{
   font-size: 28px;
